---------------------------------------------------------------------------------------------------
Version: 999.999.999
Date: 9999-99-99
  Changes:
  Features:
    - Import and export inventory filter configuration using blueprint templates.
  Bugfixes: