@@ -11,6 +11,8 @@ About
 Features
 --------
 
+> **NOTE:** Keep in mind that all of the listed operations are carried-out on opened inventory *only*, not on player's own inventory - with the exception of character screen (default vanilla game binding `E`).
+
 
 ### Create templates
 
@@ -20,6 +22,11 @@ Hold an empty blueprint while any inventory with filtering support is opened, an
 ### Set filters from templates
 
 Hold an inventory template (blueprint) when a filter-capable inventory is open, and an import button will be shown at bottom-left of the window. Click on the button with the held blueprint to set the filters and the inventory limit (if supported). Button is shown _only_ when a valid and compatible (matching slot count) inventory template blueprint is held.
+
+
+### Clear all filters
+
+Hold an empty deconstruction planner when a filter-capable inventory is open, and a clear all filters button will be shown at bottom-left of the window. Click on the button with the held deconstruction planner to clear all inventory filters. Inventory limits are not cleared, however.
 
 
 ### Template format
@@ -58,5 +65,6 @@ All code, documentation, and assets implemented as part of this mod are released
 
 -   [assets/backpack.svg](https://game-icons.net/1x1/delapouite/delivery-drone.html), by Delapouite, under [CC BY 3.0](http://creativecommons.org/licenses/by/3.0/), used in creation of modpack thumbnail.
 -   [build.sh (factorio_development.sh)](https://code.majic.rs/majic-scripts/), by Branko Majic, under [GPLv3](https://www.gnu.org/licenses/gpl-3.0.html).
+-   `graphics/icons/clear-filters-button.png`, which is a derivative based on Factorio game assets as provided by *Wube Software Ltd*. For details, see [Factorio Terms of Service](https://www.factorio.com/terms-of-service).
 -   `graphics/icons/export-template-button.png`, which is a derivative based on Factorio game assets as provided by *Wube Software Ltd*. For details, see [Factorio Terms of Service](https://www.factorio.com/terms-of-service).
 -   `graphics/icons/import-template-button.png`, which is a derivative based on Factorio game assets as provided by *Wube Software Ltd*. For details, see [Factorio Terms of Service](https://www.factorio.com/terms-of-service).
