@@ -1,3 +1,4 @@
 [gui]
 it-export=Export inventory template
 it-import=Import inventory template
+it-clear=Clear all inventory filters
